@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-27T00:42:55Z",
-  "count" : 10,
+  "timestamp" : "2022-04-27T08:10:03Z",
+  "count" : 6,
   "count_minmax" : [ 5, 11 ],
   "count_prev_day_inc" : 5,
   "count_prev_day_dec" : 27,
