@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-27T00:42:55Z",
+  "timestamp" : "2022-04-27T08:10:03Z",
   "count" : 0,
   "count_minmax" : [ 0, 0 ],
   "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 1,
+  "count_prev_day_dec" : 5,
   "uniques" : 0,
   "uniques_minmax" : [ 0, 0 ],
   "uniques_prev_day_inc" : 0,
